package org.lpw.tephra.dao;

/**
 * 数据库操作方式。
 *
 * @author lpw
 */
public enum Mode {
    /**
     * 读。
     */
    Read,
    /**
     * 写。
     */
    Write
}
