package org.lpw.tephra.dao.jdbc;

/**
 * JDBC连接。
 *
 * @author lpw
 */
public interface Connection extends org.lpw.tephra.dao.Connection<java.sql.Connection> {
}
